@@ -1,3 +1,11 @@
+2007-02-06  Neil Jagdish Patel  <njpatel@gmail.com>
+
+	Launchers now support dragging of uris to them (to launch the program 
+	with arguments.
+
+	* src/awn-task-manager.c: Teaked drop code
+	* src/awn-task.c: Added code for launching applications with uris.
+
 2007-02-02  Neil Jagdish Patel  <njp@Fedora>
 
 	Smart launcher support added
